# Prompt2Video

Job/: Dockerfile  concat_list.txt  llm.py  main.py  prompt.py  pyproject.toml
PrimaryBackend/: .dockerignore  Dockerfile  main.py  pyproject.toml  verify_prompt_route.py
PrimaryBackend/db/: database.py  model.py  validation.py
PrimaryBackend/internal_redis/: redis_client.py
PrimaryBackend/routes/: prompt.py
frontend/src/app/: page.tsx
frontend/src/app/generating/: page.tsx
frontend/src/app/video/[id]/: page.tsx
k8s/PrimaryBackend/: deployment.yml  ingress.yml  secret.yml  service.yml
k8s/Worker/: deployment.yml  role.yml  rolebinding.yml  secret.yml
k8s/cluster-issuer/: cluster-issuer.yaml
k8s/practice/: civo-jobschedular-kubeconfig  deployment.yml  job-secret.yml  secret.yml  vke-31af11ea-37b6-4187-81cc-021e6395ae67.yaml  webapp.yml  ~.kubeconfig
worker/: Dockerfile  fix_env.py  main.py  pyproject.toml
worker/db/: database.py  model.py
worker/services/: k8s.py  redis_client.py
