[project]
name = "manim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beanie>=2.0.1",
    "dotenv>=0.9.9",
    "fastapi>=0.127.0",
    "motor>=3.7.1",
    "pydantic[email]>=2.12.5",
    "redis>=7.1.0",
    "uvicorn>=0.40.0",
]
